--- a/scholar.bib
+++ b/scholar.bib
@@ -1,6 +1,7 @@
-@article{emami2023gbcnn,
-  title={A Gradient Boosting Approach for Training Convolutional and Deep Neural Networks},
+@ARTICLE{10130606,
   author={Emami, Seyedsaman and Martínez-Muñoz, Gonzalo},
-  journal={https://arxiv.org/abs/2302.11327},
-  year={2023}
-}
+  journal={IEEE Open Journal of Signal Processing}, 
+  title={A Gradient Boosting Approach for Training Convolutional and Deep Neural Networks}, 
+  year={2023},
+  pages={1-9},
+  doi={10.1109/OJSP.2023.3279011}}
