--- a/scholar.bib
+++ b/scholar.bib
@@ -3,5 +3,6 @@
   journal={IEEE Open Journal of Signal Processing}, 
   title={A Gradient Boosting Approach for Training Convolutional and Deep Neural Networks}, 
   year={2023},
-  pages={1-9},
+  volume={4},
+  pages={313-321},
   doi={10.1109/OJSP.2023.3279011}}
